# python-clean-code-debate

./: LICENSE  Makefile  README.md  pyproject.toml
src/: clean_code.py  internals.py  models.py  polymorphism.py  simple.py
tests/: conftest.py  test_performance.py
tests/factories/: __init__.py  shape_factories.py
